<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="home">HOME</string>
    <string name="shop">SHOP</string>
    <string name="wallet">WALLET</string>
    <string name="more">MORE</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="order_history">ORDER HISTORY</string>
    <string name="settings">SETTINGS</string>
    <string name="wishlist">WISHLIST</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="welcome_text">WELCOME TO THE BEST GADGET SHOP IN TOWN</string>
    <string name="easy_tap_text">Login to view recent orders and for an easy ontap re-order</string>
    <string name="first_name_error">Please enter first name</string>
    <string name="last_name_error">Please enter Last Name</string>
    <string name="email_input_error">Please Enter Valid Email</string>
    <string name="phone_error_text">Please Enter Valid Phone Number</string>
    <string name="password_length_error">Password must have at least 6 characters</string>
    <string name="confirm_password_error">Passwords must match</string>
    <string name="hint_reset_email">Password Reset Email</string>
    <string name="message_password_reset">A password reset link will be sent to your email for you to change your password. Enter your email address to continue.</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_confirm">Confirm</string>
    <string name="error_message_enter_valid_email">Enter a valid email address</string>
    <string name="reset_email_message">A password reset Link will be sent to your email</string>
    <string name="error_message_no_user_with_email">No user exists with this email address</string>
    <string name="reset_email_error_message">An error occured while sending a password reset link, please try again</string>
    <string name="hello_blank_fragment">Hello There</string>
</resources>