<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/home"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/my_account"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group4">
        <item android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group5">
        <item android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_heart"
            android:title="@string/wishlist"/>
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group6">
        <item android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
</menu>